trying more css because there is a vertical alignment issue with respect to images in cards

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,10 @@ body {
 .imgContainer {
   height: 435px;
   width: 290px;
+  vertical-align: middle;
+}
+
+.innerImgContainer {
+  height: 100%;
+  vertical-align: middle;
 }
